ancora test in namespace